use new SequencedCollection api